# airflow-provider-sandbox

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: UPSTREAMING.md
examples/: agent_in_sandbox_dag.py  demo.py  sandbox_demo_dag.py  sandbox_e2e_proof_dag.py
proposals/: DISCUSS_email.md  ISSUE.md  PR_BODY.md
scripts/: verify_sdk_conformance.py
src/airflow_provider_sandbox/: __init__.py  get_provider_info.py  provider.yaml  provider_loader.py
src/airflow_provider_sandbox/backends/: __init__.py  daytona.py  e2b.py  islo.py  local.py  modal.py
src/airflow_provider_sandbox/decorators/: sandbox.py
src/airflow_provider_sandbox/execution_time/: run_workload.py
src/airflow_provider_sandbox/executors/: __init__.py  sandbox_executor.py
src/airflow_provider_sandbox/hooks/: sandbox.py
src/airflow_provider_sandbox/operators/: sandbox.py
src/airflow_provider_sandbox/providers/: __init__.py  base.py  daytona.py  e2b.py  islo.py  local.py  modal.py
tests/backends/: test_islo.py  test_loader.py  test_local.py
tests/execution_time/: test_run_workload.py
tests/executors/: test_executor_workload.py  test_sandbox_executor.py
tests/operators/: test_sandbox_operator.py
tests/providers/: test_loader.py  test_local.py
tests/system/: test_sandbox_system.py
