[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-provider-sandbox"
version = "0.1.0"
description = "Run each Airflow task instance in an ephemeral cloud sandbox (local/Daytona/E2B/Modal/islo)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "zozo123" }]
keywords = ["airflow", "executor", "sandbox", "daytona", "e2b", "modal", "islo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "apache-airflow>=2.10.0",
]

[project.optional-dependencies]
daytona = ["daytona"]
e2b = ["e2b"]
modal = ["modal"]
islo = ["islo"]
dev = ["pytest>=7", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/zozo123/airflow-provider-sandbox"
Issues = "https://github.com/zozo123/airflow-provider-sandbox/issues"

# This is what makes Airflow discover the provider + its executor.
[project.entry-points.apache_airflow_provider]
provider_info = "airflow_provider_sandbox:get_provider_info"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_provider_sandbox"]

[tool.hatch.build.targets.wheel.force-include]
"src/airflow_provider_sandbox/provider.yaml" = "airflow_provider_sandbox/provider.yaml"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
